[gd_scene load_steps=32 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy/idle/enemy_idl_0.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/idle/enemy_idl_1.png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/idle/enemy_idl_2.png" type="Texture" id=4]
[ext_resource path="res://assets/enemy/idle/enemy_idl_3.png" type="Texture" id=5]
[ext_resource path="res://assets/enemy/death/enemy_d_0.png" type="Texture" id=6]
[ext_resource path="res://assets/enemy/death/enemy_d_1.png" type="Texture" id=7]
[ext_resource path="res://assets/enemy/death/enemy_d_2.png" type="Texture" id=8]
[ext_resource path="res://assets/enemy/death/enemy_d_3.png" type="Texture" id=9]
[ext_resource path="res://assets/enemy/death/enemy_d_4.png" type="Texture" id=10]
[ext_resource path="res://assets/enemy/death/enemy_d_5.png" type="Texture" id=11]
[ext_resource path="res://assets/enemy/death/enemy_d_6.png" type="Texture" id=12]
[ext_resource path="res://assets/enemy/death/enemy_d_7.png" type="Texture" id=13]
[ext_resource path="res://assets/enemy/run/enemy_rn_0.png" type="Texture" id=14]
[ext_resource path="res://assets/enemy/run/enemy_rn_1.png" type="Texture" id=15]
[ext_resource path="res://assets/enemy/run/enemy_rn_2.png" type="Texture" id=16]
[ext_resource path="res://assets/enemy/run/enemy_rn_3.png" type="Texture" id=17]
[ext_resource path="res://assets/enemy/run/enemy_rn_4.png" type="Texture" id=18]
[ext_resource path="res://assets/enemy/run/enemy_rn_5.png" type="Texture" id=19]
[ext_resource path="res://assets/enemy/attack/enemy_attack_0.png" type="Texture" id=20]
[ext_resource path="res://assets/enemy/attack/enemy_attack_1.png" type="Texture" id=21]
[ext_resource path="res://assets/enemy/attack/enemy_attack_2.png" type="Texture" id=22]
[ext_resource path="res://assets/enemy/attack/enemy_attack_3.png" type="Texture" id=23]
[ext_resource path="res://assets/enemy/attack/enemy_attack_4.png" type="Texture" id=24]
[ext_resource path="res://assets/enemy/attack/enemy_attack_5.png" type="Texture" id=25]
[ext_resource path="res://assets/sounds/enemy agro.wav" type="AudioStream" id=26]
[ext_resource path="res://assets/sounds/enemy death.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/sounds/enemy_attack.wav" type="AudioStream" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 20 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "run",
"speed": 60.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "death",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.5581
height = 26.5385

[sub_resource type="CircleShape2D" id=3]
radius = 80.7062

[node name="Enemy" type="Area2D"]
position = Vector2( 187.844, 141.19 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )
speed = 400

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "attack"
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 18.5826, -5.31042 )
shape = SubResource( 2 )

[node name="DeleteTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 14.3394, 12.547 )
rotation = 1.5708
shape = SubResource( 3 )
disabled = true

[node name="PlayerCast" type="RayCast2D" parent="."]
cast_to = Vector2( 200, 0 )

[node name="AgroSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )

[node name="AgroSoundTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 27 )

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 28 )
attenuation = 0.933033
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="AgroSoundTimer" to="." method="_on_AgroSoundTimer_timeout"]
